2005-11-08  Andrew Cagney  <cagney@redhat.com>

	* TestTaskAttachedObserver.java: Add .assertTaskGone, use.  For
	testAttachDetachManyTasks, only create 20 tasks.  Rename
	testDetachExitingTask to testDetachExitingMainTask.

	* TestLib.java: Add Child.findTaskUsingRefresh, and .getPid.  Add
	.isChildOf, and isDescendantOf.  Delete .sigKill.
	* TestTaskAttachedObserver.java: Update.
	* TestRefresh.java: Update.

	* TaskObservation.java: New.
	* TaskState.java: Add .processPerformAddObservation.
	* Task.java: Add .performAddObservation.
	* ProcState.java: Use Observation.requestAdd
	* Observation.java: Add abstract method .requestAdd.

	* Task.java: Replace .performZombied with .performDisappeared.
	Update instances of Wait.Observer interface to match changes to
	disappeared method.
	* TestLib.java: Ditto.
	* LinuxTask.java: Ditto.
	* LinuxHost.java: Ditto..

	* TestAttachCloningThreads.java: Delete.

2005-11-07  Jeff Johnston  <jjohnstn@redhat.com>

	* SyscallEventInfo.java (ENTRY, EXIT, UNKNOWN): New constants.
	* Task.java (performSyscalled): Add additional syscallType
	parameter.
	* TaskState.java (processPerformSyscalled): Ditto.
	* TestLib.java: Change Wait.Observer classes to add
	additional parameter to syscallEvent member functions.
	* LinuxHost.java: Add additional parameter to Wait.Observer
	syscallEvent member function.
	* TestSyscall2.java: Lower repetition count to 5000 so
	test doesn't fail due to time limitation.

2005-11-07  Andrew Cagney  <cagney@redhat.com>

	* TestTaskAttachedObserver.java: Add
	.ttestAttachDetachExitingTask.
	* TaskState.java: For "detaching", handle
	.processPerformTerminating.
	
	* TestTaskAttachedObserver.java: Refactor .attachDetach, adding
	separate .attach and .detach methods that all take a Task[].  Add
	testAttachDetachManyTasks.

	* TestLib.java: For DaemonChild, add a constructor that starts its
	argument as the program.

	* LinuxProc.java: Delete unused .auxv.

	* TestTaskAttachedObserver.java: Add .attachDetach and